--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r technicalassesement/app/requirements.txt
+          pip install -r app/requirements.txt
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
@@ -57,4 +57,4 @@ jobs:
           app-name: python-webapp-service  # Confirm this matches the name in Terraform
           slot-name: production
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: technicalassesement/app
+          package: app
