--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@ override.tf.json
 # Ignore .terraform directory
 .terraform/
 .terraform.lock.hcl
+
+# Ignore Python virtual environment
+.venv/
+
+# Ignore Python cache files
+__pycache__/
